# is_stt_tts

./: .gitignore  README.md  TODO.md  examples.md  pyproject.toml
data/ifa_b1/: ifa_b1.json
src/is_speech_cli/: cli.py  consts.py
tests/: test_cli.py
